# trading-sp500

./: .gitignore  01_data_analysis.ipynb  02_interactive_kelly_strategy.ipynb  02_kelly_criterion.ipynb  03_analysis_kelly_strategy.ipynb  04_robubustness_analysis.ipynb  Dockerfile  README.md  postBuild  pyproject.toml  requirements.txt  serve.py  util_kelly.py
data/: README.md
